works new commit

--- a/templates/about/about.html
+++ b/templates/about/about.html
@@ -32,7 +32,7 @@
             </div>
             <ul class="about_two_ul">
                     <li>
-                        <span class="about_two_li">영화 제작자</span>
+                        <span class="about_two_li">대표</span>
                         <span class="about_two_lx">김성진</span>
                     </li>
                     <li>
