--- a/templates/about/index.html
+++ b/templates/about/index.html
@@ -268,7 +268,7 @@
         </div>
       </div>
     </div>
-    <div class="button_main"><a href="/" class="button_side">VIEW MORE</a></div>
+    <div class="button_main"><a href="{% url 'works:works' %}" class="button_side">VIEW MORE</a></div>
   </div>
 
   <div style="background-color: #efefef;">
