--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,7 @@
 
     <link rel="stylesheet" type="text/css" href="{% static 'css/index.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/about.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/works.css' %}">
 </head>
 <body>
       <!-- pc버전 -->
