--- a/templates/about/about.html
+++ b/templates/about/about.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-<div style="height: 100vh; min-height: 1180px;">
+<div class="about_height">
     <div class="image-container">
         <img src="{% static 'img/backimg-01.jpg' %}" class="side-background" alt="배경 이미지">
 
