--- a/templates/about/index.html
+++ b/templates/about/index.html
@@ -309,6 +309,6 @@
         </div>
       </div>
     </div>
-    <div class="button_main"><a href="/" class="button_side">VIEW MORE</a></div>
+    <div class="button_main"><a href="{% url 'news:news' %}" class="button_side">VIEW MORE</a></div>
   </div>
 {% endblock %}
