--- a/static/css/index.css
+++ b/static/css/index.css
@@ -120,7 +120,7 @@
     text-decoration: none;
     color: #fff;
     margin-right: 4rem;
-    font-size: 0.9rem;
+    font-size: 1rem;
     font-weight: 600;
     position: relative;
     padding: 0.5rem 0;
@@ -150,9 +150,17 @@
     margin-left: 10%;
     text-decoration: none;
     color: #fff;
-    font-size: 2.5rem;
-    font-weight: 700;
+    font-size: 2rem;
+    font-weight: 400;
     font-family: 'Nanum Pen Script', cursive;
+    display: flex; 
+    align-items: center;
+  }
+
+  .navbar_logo img {
+    width: 40px; 
+    height: 40px;
+    margin-right: 2px;
   }
 
   .navbar_scroll {
