--- a/templates/news/news.html
+++ b/templates/news/news.html
@@ -1,5 +1,39 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
+<div class="news_height">
+  <div class="image-container">
+      <img src="{% static 'img/backimg-01.jpg' %}" class="side-background" alt="배경 이미지">
 
+      <div class="img_about_main">
+        <div class="img_about_one">NEWS</div>
+        <div class="img_about_two">최고의 이야기를 담은 영화를 제작, 감동과 재미를 넘어선 경험을 선사합니다.</div>
+      </div>
+  </div>
+  <div class="about_animation">
+    <h2 class="works_text_one">NOTICE</h2>
+    <div class="news_container">
+        <table class="news_table">
+            <thead>
+                <tr>
+                    <th>번호</th>
+                    <th>제목</th>
+                    <th>게시일</th>
+                    <th>작성자</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for news in index %}
+                <tr onclick="location.href='{% url 'news:detail' news.id %}'">
+                    <td>{{ forloop.revcounter }}</td>
+                    <td>{{ news.subject }}</td>
+                    <td>{{ news.create_date|date:"Y-m-d" }}</td>
+                    <td>{{ news.author }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+  </div>
+</div>
 {% endblock %}
