--- a/templates/works/works.html
+++ b/templates/works/works.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-<div style="height: 100vh; min-height: 1900px;">
+<div class="works_height">
   <div class="image-container">
       <img src="{% static 'img/backimg-01.jpg' %}" class="side-background" alt="배경 이미지">
 
@@ -11,7 +11,7 @@
       </div>
   </div>
   <div class="about_animation">
-    <h2 class="works_text_one">CONTENT</h2>
+    <h2 class="works_text_one">CONTENTS</h2>
     <div class="works_container">
       {% for works in index %}
       <div class="works_main" onclick="location.href='{% url 'works:detail' works.id%}'">
