--- a/templates/base.html
+++ b/templates/base.html
@@ -1,8 +1,11 @@
 {% load static %}
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ko">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>스튜디오야수</title>
     <meta name="title" content="스튜디오야수"/>
     <meta name="description" content="스튜디오야수 공식 홈페이지"/>
