--- a/templates/works/detail.html
+++ b/templates/works/detail.html
@@ -11,7 +11,7 @@
         </div>
     </div>
     <div class="about_animation">
-        <h2 class="works_text_one">CONTENT</h2>
+        <h2 class="works_text_one">CONTENTS</h2>
         <div class="works_detail_main">
             <img src="{{ index.photo.url }}" alt="Work Photo">
             <ul class="works_detail_ul">
