--- a/static/css/about.css
+++ b/static/css/about.css
@@ -1,107 +1,325 @@
-.about_height {
-    height: 100vh;
-    min-height: 1180px;
+@media all and (min-width:1024px) {
+    .about_height {
+        height: 100vh;
+        min-height: 1180px;
+    }
+
+    /* 애니메이션 */
+    .about_animation{
+        animation: riseFromBottom 0.5s forwards;
+    }
+    /* 이미지 바 */
+    .side-background {
+        width: 100%;
+        height: 30rem; /* 이미지의 높이를 설정하세요 */
+        object-fit: cover;
+        object-position: center;
+    }
+
+    .img_about_main{
+        position: absolute;
+        text-align: center;
+        top: 45%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+    .img_about_one {
+        text-align: center;
+        align-items: center;
+        color: white;
+        margin: 0 auto;
+        font-size: 4rem;
+        font-weight: 600;
+        border-bottom: 3px solid white;
+        width: 700px;
+    }
+
+    .img_about_two {
+        text-align: center;
+        color: white;
+        font-size: 1.3rem;
+        padding-top: 1rem;
+        width: 1000px;
+    }
+
+    /* about 첫번째 단 */ 
+    .about_main_two {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: flex-start;
+        margin: 0 auto;
+        width: 1000px;
+    }
+
+    .about_main_two_text{
+        font-size: 2rem;
+        font-weight: 900;
+        padding-bottom: 1rem;
+    }
+
+    .about_main_two_wrapper {
+        font-size: 1.1rem;
+        text-align: center;
+        width: 300px;
+        padding: 4rem 1rem;
+    }
+
+
+    /* about 두번째 단 */ 
+    .about_two {
+        display: block;
+        margin: 0 auto;
+        width: 1000px;
+    }
+
+    .about_two_text {
+        display: flex;
+        justify-content: start;
+        border-bottom: 1px solid;
+        padding: 2rem 1rem 1rem 0;
+    }
+
+    .about_two_text_one{
+        font-size: 2.5rem;
+        font-weight: 700;
+        color: #000000;
+    }
+
+    .about_two_ul {
+        list-style: none;
+        width: 1000px;
+        padding: 1rem 1rem;
+    }
+
+    .about_two_li, .about_two_lx {
+        font-size: 1.2rem;
+        display: inline-block;
+        margin-bottom: 1.5rem;
+    }
+
+    .about_two_li {
+        width: 250px;
+    }
+
+    .about_two_lx {
+        width: 650px;
+    }
 }
 
-/* 애니메이션 */
-.about_animation{
-    animation: riseFromBottom 0.5s forwards;
-}
-/* 이미지 바 */
-.side-background {
-    width: 100%;
-    height: 30rem; /* 이미지의 높이를 설정하세요 */
-    object-fit: cover;
-    object-position: center;
+@media all and (min-width:768px) and (max-width:1023px) {
+    .about_height {
+        height: 100vh;
+        min-height: 1180px;
+    }
+
+    /* 애니메이션 */
+    .about_animation{
+        animation: riseFromBottom 0.5s forwards;
+    }
+    /* 이미지 바 */
+    .side-background {
+        width: 100%;
+        height: 30rem; /* 이미지의 높이를 설정하세요 */
+        object-fit: cover;
+        object-position: center;
+    }
+
+    .img_about_main{
+        position: absolute;
+        text-align: center;
+        top: 45%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+    .img_about_one {
+        text-align: center;
+        align-items: center;
+        color: white;
+        margin: 0 auto;
+        font-size: 3.5rem;
+        font-weight: 600;
+        border-bottom: 3px solid white;
+        width: 550px;
+    }
+
+    .img_about_two {
+        text-align: center;
+        color: white;
+        font-size: 1.1rem;
+        padding-top: 1rem;
+        width: 700px;
+    }
+
+    /* about 첫번째 단 */ 
+    .about_main_two {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: flex-start;
+        margin: 0 auto;
+        width: 700px;
+    }
+
+    .about_main_two_text{
+        font-size: 1.8rem;
+        font-weight: 900;
+        padding-bottom: 1rem;
+    }
+
+    .about_main_two_wrapper {
+        font-size: 1rem;
+        text-align: center;
+        width: 300px;
+        padding: 3rem 1rem;
+    }
+
+
+    /* about 두번째 단 */ 
+    .about_two {
+        display: block;
+        margin: 0 auto;
+        width: 700px;
+    }
+
+    .about_two_text {
+        display: flex;
+        justify-content: start;
+        border-bottom: 1px solid;
+        padding: 1rem 1rem 1rem 0;
+    }
+
+    .about_two_text_one{
+        font-size: 2rem;
+        font-weight: 700;
+        color: #000000;
+    }
+
+    .about_two_ul {
+        list-style: none;
+        width: 700px;
+        padding: 1rem 1rem;
+    }
+
+    .about_two_li, .about_two_lx {
+        font-size: 1.1rem;
+        display: inline-block;
+        margin-bottom: 1.5rem;
+    }
+
+    .about_two_li {
+        width: 100px;
+    }
+
+    .about_two_lx {
+        width: 550px;
+    }
 }
 
-.img_about_main{
-    position: absolute;
-    text-align: center;
-    top: 45%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
+@media all and (max-width:767px) {
+    /* 애니메이션 */
+    .about_animation{
+        animation: riseFromBottom 0.5s forwards;
+    }
+    /* 이미지 바 */
+    .side-background {
+        width: 100%;
+        height: 20rem; /* 이미지의 높이를 설정하세요 */
+        object-fit: cover;
+        object-position: center;
+    }
 
-.img_about_one {
-    text-align: center;
-    align-items: center;
-    color: white;
-    margin: 0 auto;
-    font-size: 4rem;
-    font-weight: 600;
-    border-bottom: 3px solid white;
-    width: 700px;
-}
+    .img_about_main{
+        position: absolute;
+        text-align: center;
+        top: 45%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
 
-.img_about_two {
-    text-align: center;
-    color: white;
-    font-size: 1.3rem;
-    padding-top: 1rem;
-    width: 1000px;
-}
+    .img_about_one {
+        text-align: center;
+        align-items: center;
+        color: white;
+        margin: 0 auto;
+        font-size: 3rem;
+        font-weight: 600;
+        border-bottom: 3px solid white;
+        width: 60vw;
+    }
 
-/* about 첫번째 단 */ 
-.about_main_two {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: flex-start;
-    margin: 0 auto;
-    width: 1000px;
-}
+    .img_about_two {
+        text-align: center;
+        color: white;
+        font-size: 0.8rem;
+        padding-top: 1rem;
+        width: 60vw;
+    }
 
-.about_main_two_text{
-    font-size: 2rem;
-    font-weight: 900;
-    padding-bottom: 1rem;
-}
+    /* about 첫번째 단 */ 
+    .about_main_two {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto;
+        width: 90vw;
+    }
 
-.about_main_two_wrapper {
-    font-size: 1.1rem;
-    text-align: center;
-    width: 300px;
-    padding: 4rem 1rem;
-}
+    .about_main_two_text{
+        font-size: 1.8rem;
+        font-weight: 900;
+        padding-bottom: 1rem;
+    }
+
+    .about_main_two_wrapper {
+        font-size: 1rem;
+        text-align: center;
+        width: 280px;
+        padding: 2rem 0;
+    }
 
 
-/* about 두번째 단 */ 
-.about_two {
-    display: block;
-    margin: 0 auto;
-    width: 1000px;
-}
+    /* about 두번째 단 */ 
+    .about_two {
+        display: block;
+        margin: 0 auto;
+        width: 90vw;
+    }
 
-.about_two_text {
-    display: flex;
-    justify-content: start;
-    border-bottom: 1px solid;
-    padding: 2rem 1rem 1rem 0;
-}
+    .about_two_text {
+        display: flex;
+        justify-content: start;
+        border-bottom: 1px solid;
+        padding: 2rem 1rem 1rem 0;
+    }
 
-.about_two_text_one{
-    font-size: 2.5rem;
-    font-weight: 700;
-    color: #000000;
-}
+    .about_two_text_one{
+        font-size: 2rem;
+        font-weight: 700;
+        color: #000000;
+    }
 
-.about_two_ul {
-    list-style: none;
-    width: 1000px;
-    padding: 1rem 1rem;
-}
+    .about_two_ul {
+        list-style: none;
+        width: 90vw;
+        padding: 1rem 0;
+    }
 
-.about_two_li, .about_two_lx {
-    font-size: 1.2rem;
-    display: inline-block;
-    margin-bottom: 1.5rem;
-}
+    .about_two_li, .about_two_lx {
+        font-size: 1.1rem;
+        display: inline-flex;
+        margin-bottom: 1.5rem;
+        align-items: flex-start;
+    }
 
-.about_two_li {
-    width: 250px;
-}
+    .about_two_li {
+        width: 30%;
+    }
 
-.about_two_lx {
-    width: 650px;
+    .about_two_lx {
+        width: 60%;
+    }
 }
