--- a/static/css/news.css
+++ b/static/css/news.css
@@ -34,8 +34,8 @@
 
 .news_table th {
     text-align: center;
-    border-top: 2px solid #ccc;
-    border-bottom: 2px solid #ccc;
+    background-color: #000000;
+    color: white;
 }
 
 .news_table th:nth-child(1),
@@ -60,3 +60,40 @@
     width: 10%;
     text-align: center;
 }
+
+/* detail 메인 */ 
+.news_detail_height {
+    height: 100vh;
+    min-height: 1200px;
+}
+.news_detail_main {
+    width: 1000px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto auto;
+    grid-gap: 1rem;
+    margin: 1rem auto;
+}
+
+.news_detail_main h3 {
+    font-size: 1.8rem;
+    font-weight: 700;
+    margin-top: 1rem;
+    margin-bottom: 0;
+    color: #333;
+}
+
+.news_detail_author {
+    font-size: 1rem;
+    color: #888;
+    padding-bottom: 1rem;
+    border-bottom: 2px solid gray;
+}
+
+.news_detail_content {
+    font-size: 1.1rem;
+    line-height: 1.6;
+    color: #555;
+
+}
+
