--- a/templates/about/index.html
+++ b/templates/about/index.html
@@ -219,10 +219,10 @@
       <h2 class="main_two_text_one">About</h2>
     </div>
     <div class="main_two_wrapper">
-      콘텐트리중앙은 완성형 콘텐트 스튜디오인 SLL 과 멀티플렉스의 공간 경험과 투자 배급을 통한
-      영화 콘텐트 가치를 함께 제공하는 메가박스 및 컨슈머 트렌드 리딩 컴퍼니인 HLL 을 보유하고 있는
-      종합 미디어 컨텐트 사업자로서 드라마 · 영화 · 매거진을 아우르는 콘텐트를 지속 제공하고 라이브 커머스 등
-      새로운 비즈니스를 통해 소비자들의 라이프스타일을 리딩하는 선도 기업입니다.
+      열정과 전문성을 바탕으로 다양한 장르의 영화를 제작하는 회사입니다. 
+      목표는 관객들에게 감동과 즐거움을 선사하는 작품을 만드는 것입니다.
+      창의적이고 독창적인 아이디어를 가지고 있으며, 탁월한 시나리오 작성과 감각적인 시각 효과를 통해 영화의 퀄리티를 높이고 있습니다. 
+      또한, 우수한 배우와 스태프들과의 협업으로 최상의 연기와 제작을 이끌어내고 있습니다.
     </div>
   </div>
   <div class="button_main"><a href="{% url 'about:about' %}" class="button_side">VIEW MORE</a></div>
@@ -253,7 +253,7 @@
         </div>
         <div class="main_three_img">
           <img src="{% static 'img/이미지업로드.svg' %}">
-          <p>영화 <보안사></p>
+          <p>영화 <엘리베이터></p>
           <span>감독 : 미정<br>주연 : 미정<br>제작사 : 스튜디오야수</span>
         </div>
         <div class="main_three_img">
@@ -264,7 +264,7 @@
         <div class="main_three_img">
           <img src="{% static 'img/이미지업로드.svg' %}">
           <p>OTT <김포></p>
-          <span>감독 : 미정<br>주연 : 미정<br>제작사 : 스튜디오야수</span>
+          <span>감독 : 송해성<br>주연 : 미정<br>제작사 : 스튜디오야수</span>
         </div>
       </div>
     </div>
