--- a/templates/contact/contact.html
+++ b/templates/contact/contact.html
@@ -1,5 +1,17 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-
+<div class="news_height">
+    <div class="image-container">
+        <img src="{% static 'img/backimg-01.jpg' %}" class="side-background" alt="배경 이미지">
+  
+        <div class="img_about_main">
+          <div class="img_about_one">CONTACT</div>
+          <div class="img_about_two">최고의 이야기를 담은 영화를 제작, 감동과 재미를 넘어선 경험을 선사합니다.</div>
+        </div>
+    </div>
+    <div class="about_animation">
+      <h2 class="works_text_one">NAVER MAP</h2>
+    </div>
+  </div>
 {% endblock %}
