--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
   <div class="navbar_main">
     <a class="navbar_logo" href="{% url 'about:index' %}">
         <img src="{% static 'img/logo.png' %}">
-        <span style="vertical-align: middle;">스튜디오야수</span>
+        <span style="vertical-align: middle;">STUDIO<br>BEAST</span>
     </a>
     
     <div class="navbar_links">
