--- a/templates/works/detail.html
+++ b/templates/works/detail.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-<div style="height: 100vh; min-height: 1400px;">
+<div class="works_detail_height">
     <div class="image-container">
         <img src="{% static 'img/backimg-01.jpg' %}" class="side-background" alt="배경 이미지">
 
