paginator new upload

--- a/templates/about/index.html
+++ b/templates/about/index.html
@@ -233,7 +233,7 @@
         <h2 class="main_three_text_one">Continue</h2>
       </div>
       <div class="main_three_text_two">
-        김성진 대표가 보유 중인 판권으로 현재 제작 중인 콘텐츠들입니다.
+        영화제작자 김성진이 보유 중인 판권으로 현재 제작 중인 콘텐츠들입니다.
       </div>
       <div class="main_three_wrapper">
         <div class="main_three_img">
@@ -244,27 +244,27 @@
         <div class="main_three_img">
           <img src="{% static 'img/이미지업로드.svg' %}">
           <p>OTT <김포></p>
-          <span>감독 : 이원석<br>원한 : 미정<br>각본 : 박상욱<br>주연 : 미정<br>제작규모 : 180억<br>제작사 : 스튜디오야수</span>
+          <span>감독 : 이원석<br>원한 : 미정<br>각본 : 박상욱<br>주연 : 비공개<br>제작규모 : 180억<br>제작사 : 스튜디오야수</span>
         </div>
         <div class="main_three_img">
           <img src="{% static 'img/이미지업로드.svg' %}">
           <p>영화 <타워크레인></p>
-          <span>감독 : 김부철<br>원한 : 미정<br>각본 : 김부철<br>주연 : 미정<br>제작규모 : 140억<br>제작사 : 스튜디오야수</span>
+          <span>감독 : 김부철<br>원한 : 미정<br>각본 : 김부철<br>주연 : 비공개<br>제작규모 : 140억<br>제작사 : 스튜디오야수</span>
         </div>
         <div class="main_three_img">
           <img src="{% static 'img/이미지업로드.svg' %}">
           <p>영화 <은폐수사></p>
-          <span>감독 : 김부철<br>원한 : 미정<br>각본 : 김부철<br>주연 : 미정<br>제작규모 : 60억<br>제작사 : 스튜디오야수</span>
+          <span>감독 : 김부철<br>원한 : 미정<br>각본 : 김부철<br>주연 : 비공개<br>제작규모 : 60억<br>제작사 : 스튜디오야수</span>
         </div>
         <div class="main_three_img">
           <img src="{% static 'img/이미지업로드.svg' %}">
           <p>영화 <보안사></p>
-          <span>감독 : 미정<br>원한 : 미정<br>각본 : 김영주<br>주연 : 미정<br>제작규모 : 50억<br>제작사 : 스튜디오야수</span>
+          <span>감독 : 미정<br>원한 : 미정<br>각본 : 김영주<br>주연 : 비공개<br>제작규모 : 50억<br>제작사 : 스튜디오야수</span>
         </div>
         <div class="main_three_img">
           <img src="{% static 'img/이미지업로드.svg' %}">
           <p>영화 <엘리베이터></p>
-          <span>감독 : 권수경<br>원한 : 미정<br>각본 : 이상훈<br>주연 : 미정<br>제작규모 : 25억<br>제작사 : 스튜디오야수</span>
+          <span>감독 : 권수경<br>원한 : 미정<br>각본 : 이상훈<br>주연 : 비공개<br>제작규모 : 25억<br>제작사 : 스튜디오야수</span>
         </div>
       </div>
     </div>
