--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,3 +1,10 @@
+body {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 @keyframes slideInFromTop {
     0% {
       transform: translate(-50%, -70%);
