index continue new upload

--- a/templates/about/index.html
+++ b/templates/about/index.html
@@ -233,7 +233,7 @@
         <h2 class="main_three_text_one">Continue</h2>
       </div>
       <div class="main_three_text_two">
-        영화제작자 김성진이 보유 중인 판권으로 현재 제작 중인 콘텐츠들입니다.
+        영화제작자 김성진이 보유한 판권으로 현재 제작 중인 콘텐츠들입니다.
       </div>
       <div class="main_three_wrapper">
         <div class="main_three_img">
