--- a/templates/base.html
+++ b/templates/base.html
@@ -3,18 +3,8 @@
 <!doctype html>
 <html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>스튜디오야수</title>
-    <meta name="title" content="스튜디오야수"/>
-    <meta name="description" content="스튜디오야수 공식 홈페이지"/>
-    <link rel="icon" href="{% static 'img/logo.png' %}"/>
-
-    <meta property="og:title" content="스튜디오야수"/> 
-    <meta property="og:type" content="homepage"/>
-    <meta property="og:description" content="스튜디오야수 공식 홈페이지"/> 
-    
+    {% block title %}
+    {% endblock %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
