--- a/templates/news/detail.html
+++ b/templates/news/detail.html
@@ -1,5 +1,17 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block title %}
+<title>스튜디오야수 보도 자료</title>
+<meta name="title" content="스튜디오야수 보도 자료"/>
+<meta name="description" content="최고의 이야기를 담은 영화를 제작, 감동과 재미를 넘어선 경험을 선사합니다."/>
+<link rel="icon" href="{% static 'img/logo.png' %}"/>
+
+<meta property="og:title" content="스튜디오야수 보도 자료"/> 
+<!-- <meta property="og:url" content=""/> -->
+<meta property="og:type" content="homepage"/>
+<meta property="og:description" content="최고의 이야기를 담은 영화를 제작, 감동과 재미를 넘어선 경험을 선사합니다."/> 
+<meta property="og:image" content="{% static 'img/background.jpg' %}"/>
+{% endblock %}
 {% block content %}
 <div class="news_detail_height">
     <div class="image-container">
