navermap new upload

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/about.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/works.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/news.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/contact.css' %}">
 </head>
 <body>
       <!-- pc버전 -->
