--- a/templates/contact/contact.html
+++ b/templates/contact/contact.html
@@ -11,9 +11,10 @@
 <meta property="og:type" content="homepage"/>
 <meta property="og:description" content="최고의 이야기를 담은 영화를 제작, 감동과 재미를 넘어선 경험을 선사합니다."/> 
 <meta property="og:image" content="{% static 'img/background.jpg' %}"/>
+<script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=w8rvzud9vg"></script>
 {% endblock %}
 {% block content %}
-<div class="news_height">
+<div class="contact_height">
     <div class="image-container">
         <img src="{% static 'img/backimg-01.jpg' %}" class="side-background" alt="배경 이미지">
   
@@ -25,5 +26,39 @@
     <div class="about_animation">
       <h2 class="works_text_one">NAVER MAP</h2>
     </div>
+    <div class="contact_navermap">
+      <div id="map" style="width: 100%; height: 400px;"></div>
+    </div>
+    <script>
+      var mapOptions = {
+          center: new naver.maps.LatLng(37.3595704, 127.105399),
+          zoom: 12
+      };
+      
+      var map = new naver.maps.Map('map', mapOptions);
+      resize();
+      window.addEventListener('resize', resize);
+      
+      function resize() {
+          var mapWidth = window.innerWidth;
+          var mapHeight;
+      
+          if (mapWidth <= 767) {
+              mapWidth = Math.min(mapWidth, 80 * window.innerWidth / 100) + 'px';
+              mapHeight = '250px';
+          } else if (mapWidth <= 1023) {
+              mapWidth = '700px';
+              mapHeight = '400px';
+          } else {
+              mapWidth = '1000px';
+              mapHeight = '600px';
+          }
+      
+          document.getElementById('map').style.width = mapWidth;
+          document.getElementById('map').style.height = mapHeight;
+          map.setSize(new naver.maps.Size(parseInt(mapWidth), parseInt(mapHeight)));
+      }
+    </script>
+    
   </div>
 {% endblock %}
