--- a/static/css/index.css
+++ b/static/css/index.css
@@ -18,39 +18,44 @@ body {
     }
   }
 
-  @keyframes slideInLeft {
-    0% {
-      transform: translateX(-10%);
-      opacity: 0;
-    }
-    100% {
-      transform: translateX(0);
-      opacity: 1;
-    }
+@keyframes slideInLeft {
+  0% {
+    transform: translateX(-10%);
+    opacity: 0;
   }
-
-  @keyframes riseFromBottom {
-    0% {
-      transform: translateY(5%);
-      opacity: 0;
-    }
-    100% {
-      transform: translateY(0);
-      opacity: 1;
-    }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
   }
+}
 
-  @keyframes navbarBottom {
-    0% {
-      transform: translateY(-70%);
-      opacity: 0;
-    }
-    100% {
-      transform: translateY(0);
-      opacity: 1;
-    }
+@keyframes riseFromBottom {
+  0% {
+    transform: translateY(5%);
+    opacity: 0;
   }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
 
+@keyframes navbarBottom {
+  0% {
+    transform: translateY(-70%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes navbarFadeIn {
+  to {
+      opacity: 1;
+  }
+}
 
   body {
     margin: 0!important;
@@ -511,7 +516,7 @@ body {
     align-items: center;
     color: #fff; 
     z-index: 999;
-    animation: navbarBottom 0.5s forwards
+    animation: navbarBottom 0.5s forwards;
   }
 
   .navbar_logo {
@@ -570,7 +575,7 @@ body {
     transform: translateX(100%);
     z-index: 999;
     transition: transform 0.3s ease;
-    opacity: 0.9;
+    opacity: 0;
   }
 
   .navbar_menu a {
@@ -581,6 +586,7 @@ body {
     margin-bottom: 4rem;
     text-decoration: none;
     font-weight: 600;
+    width: 100%;
   }
 
   .navbar_burger svg {
@@ -600,6 +606,7 @@ body {
 
   .navbar_menu.active {
     transform: translateX(0);
+    opacity: 0.9;
   }
 
   .navbar_overlay.active {
@@ -940,7 +947,7 @@ body {
     align-items: center;
     color: #fff; 
     z-index: 999;
-    animation: navbarBottom 0.5s forwards
+    animation: navbarBottom 0.5s forwards;
   }
 
   .navbar_logo {
@@ -999,7 +1006,7 @@ body {
     transform: translateX(100%);
     z-index: 999;
     transition: transform 0.3s ease;
-    opacity: 0.9;
+    opacity: 0;
   }
 
   .navbar_menu a {
@@ -1010,6 +1017,7 @@ body {
     margin-bottom: 3rem;
     text-decoration: none;
     font-weight: 600;
+    width: 100%;
   }
 
   .navbar_burger svg {
@@ -1029,6 +1037,7 @@ body {
 
   .navbar_menu.active {
     transform: translateX(0);
+    opacity: 0.9;
   }
 
   .navbar_overlay.active {
