news new upload

--- a/templates/about/index.html
+++ b/templates/about/index.html
@@ -292,31 +292,31 @@
         <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-              회사가 하는일
+              스튜디오야수란?
             </button>
           </h2>
           <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">저희 제작사는 영화 산업의 동향과 시장 요구에 민감하게 대응하며, 새로운 아이디어와 스토리로 관객들을 사로잡는 작품을 창조합니다. </div>
+            <div class="accordion-body">저희 제작사는 영화 산업의 동향과 시장 요구에 민감하게 대응하며, 새로운 아이디어와 스토리로 관객들을 사로잡는 작품을 창조합니다.</div>
           </div>
         </div>
         <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-              시나리오 제출하는 방법
+              시나리오 제출 방법
             </button>
           </h2>
           <div id="flush-collapseTwo" class="accordi-collapse collapse" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">모든 접수는 <strong>sjkim6062@hanmail.net</strong>에서 받고 있으며 궁금하신 사항은 편하게 연락주세요.</div>
+            <div class="accordion-body"><strong>sjkim6062@hanmail.net</strong>으로 모든 접수를 받고 있습니다. 궁금하신 사항은 언제든지 연락바랍니다.</div>
           </div>
         </div>
         <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-              기타 궁금하신 사항
+              기타 문의사항
             </button>
           </h2>
           <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">sjkim6062@hanmail.net 또는 010-5249-8214</strong>으로 연락주시면 친절하게 답변해드리겠습니다.</div>
+            <div class="accordion-body">이메일로 연락 주시면 친절하게 답변해 드리겠습니다.</div>
           </div>
         </div>
       </div>
