--- a/templates/about/index.html
+++ b/templates/about/index.html
@@ -245,7 +245,7 @@
         <h2 class="main_three_text_one">Continue</h2>
       </div>
       <div class="main_three_text_two">
-        영화제작자 김성진이 보유한 6편의 판권으로 현재 제작 중인 콘텐츠들입니다.
+        스튜디오야수가 보유한 6편의 판권으로 현재 진행 중인 콘텐츠들입니다.
       </div>
       <div class="main_three_wrapper">
         <div class="main_three_img">
